# AutoNav_26-27

./: .gitignore  AUTORESEARCH_PATH.md  GAZEBO_WORK_LOG.md  MESSAGE_FOR_NEXT_TEAM.md  PLAN.md
docs/: sick.md  (+26 more)
isaac_ros-dev/src/autonav-gui-hud/: install.sh  package.xml  requirements.txt  run_gui.sh  setup.cfg  setup.py
isaac_ros-dev/src/autonav-gui-hud/autonav_gui_hud/: hud_node.py
isaac_ros-dev/src/autonav-gui-hud/config/: watched_topics.yaml
isaac_ros-dev/src/autonav-gui-hud/launch/: hud.launch.py
isaac_ros-dev/src/autonav-gui-hud/python-gui-example/: hud_node.py  run_gui.command
isaac_ros-dev/src/autonav_automated_testing/: package.xml
isaac_ros-dev/src/autonav_automated_testing/config/: calibration_constants.yaml  testing_data_collection_setter.yaml
isaac_ros-dev/src/autonav_automated_testing/launch/: t000_AUTO_DAQ_MODE.launch.py  t000_DAQ_MODE.launch.py  t002_Line_Comp.launch.py
isaac_ros-dev/src/autonav_automated_testing/src/: data_publisher.cpp  video_recorder.py
isaac_ros-dev/src/autonav_automated_testing/src/automators/: base_automator.py  t000_automator.py  t002_automator.py
isaac_ros-dev/src/autonav_detection/: CMakeLists.txt  package.xml
isaac_ros-dev/src/autonav_detection/config/: grade_detector.yaml  lidar_line_detector.yaml  lidar_line_detector_rssi.yaml  line_detector.yaml
isaac_ros-dev/src/autonav_detection/include/autonav_detection/: cuda.cuh  detection.hpp  grade_detector.hpp
isaac_ros-dev/src/autonav_detection/launch/: detection.launch.py
isaac_ros-dev/src/autonav_detection/src/grade/: pca_node.cpp  pca_pipeline.cpp
isaac_ros-dev/src/autonav_detection/src/lidar_line/: node.cpp
isaac_ros-dev/src/autonav_detection/src/line/: cuda.cu  detection.cpp  lines.code-workspace  node.cpp
isaac_ros-dev/src/autonav_electrical_publisher/: CMakeLists.txt  package.xml
isaac_ros-dev/src/autonav_electrical_publisher/launch/: electrical_publisher.launch.py
isaac_ros-dev/src/autonav_electrical_publisher/src/: electrical_publisher.cpp
isaac_ros-dev/src/autonav_hybrid_planner/: CMakeLists.txt  autonav_hybrid_planner.xml  package.xml
isaac_ros-dev/src/autonav_hybrid_planner/include/autonav_hybrid_planner/: local_then_straight_planner.hpp
isaac_ros-dev/src/autonav_hybrid_planner/src/: local_then_straight_planner.cpp
isaac_ros-dev/src/autonav_interfaces/: CMakeLists.txt  package.xml
isaac_ros-dev/src/autonav_interfaces/action/: NavigateToWaypoint.action
isaac_ros-dev/src/autonav_interfaces/msg/: LinePixels.msg  LinePoints.msg
isaac_ros-dev/src/autonav_interfaces/srv/: GpsToLocal.srv  LocalToGps.srv
isaac_ros-dev/src/custom_behavior_tree_plugins/: CMakeLists.txt  breadcrumb_reverse.xml  gradient_escape.xml  inflation_backout.xml  package.xml
isaac_ros-dev/src/custom_behavior_tree_plugins/include/breadcrumb/: breadcrumb_buffer.hpp  breadcrumb_reverse.hpp  forward_blocked_check.hpp  is_forward_blocked.hpp
isaac_ros-dev/src/custom_behavior_tree_plugins/include/gradient_escape/: goal_bender.hpp  gradient_escape.hpp
isaac_ros-dev/src/custom_behavior_tree_plugins/src/: breadcrumb_buffer.cpp  breadcrumb_reverse.cpp  goal_bender.cpp  gradient_escape.cpp  inflation_backout.cpp  is_forward_blocked.cpp  path_footprint_safe_condition.cpp  path_goal_consistent_condition.cpp  path_significantly_changed_decorator.cpp
isaac_ros-dev/src/gps_waypoint_handler/: package.xml  setup.py
isaac_ros-dev/src/gps_waypoint_handler/examples/: mission_chained.py
isaac_ros-dev/src/gps_waypoint_handler/gps_waypoint_handler/: gps_conversions.py  gps_ekf.py  gps_handler_node.py
isaac_ros-dev/src/gps_waypoint_handler/test/: test_gps_ekf.py
isaac_ros-dev/src/gradient_escape/: CMakeLists.txt  package.xml
isaac_ros-dev/src/gradient_escape/include/gradient_escape/: gradient_escape.hpp
isaac_ros-dev/src/gradient_escape/src/: gradient_escape.cpp
isaac_ros-dev/src/igvc_competition_sim/: README.md  Run_IGVC_COMPETITION_FORTRESS_JETSON_STACK.command  Run_IGVC_COMPETITION_FORTRESS_SIM_ONLY.command  Run_IGVC_COMPETITION_FORTRESS_TEST.command  package.xml  setup.cfg  setup.py
isaac_ros-dev/src/igvc_competition_sim/autoresearch/: evaluate.py  program.md
isaac_ros-dev/src/igvc_competition_sim/autoresearch/courses/: compact_baseline.yaml  dense_obstacles.yaml  ramp_turns.yaml  sparse_lines.yaml  tight_gaps.yaml
isaac_ros-dev/src/igvc_competition_sim/autoresearch/lib/: check_footprint.py  fitness.py  metrics.py  reaper.sh  run_one.sh  selftest_metrics.py  validate_course.py
isaac_ros-dev/src/igvc_competition_sim/autoresearch/references/: CAMERA_GAP_FINDINGS.md  CONTEXT.md  UNKNOWNS.md
isaac_ros-dev/src/igvc_competition_sim/config/: dynamics_calibration.yaml  dynamics_replay_profiles.yaml  igvc_competition_compact.yaml
isaac_ros-dev/src/igvc_competition_sim/igvc_competition_sim/: __init__.py  calibrated_dynamics.py  calibration_report.py  camera_bridge.py  course.py  course_monitor.py  dynamics_config.py  dynamics_replay.py  generate_world.py  lidar_geometry.py  mission_runner.py  odom_bridge.py  run_analyzer.py  sensor_harness.py
isaac_ros-dev/src/igvc_competition_sim/launch/: igvc_competition.launch.py
isaac_ros-dev/src/igvc_competition_sim/worlds/: igvc_competition_compact.sdf
isaac_ros-dev/src/imu_cov_inflator/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/imu_cov_inflator/imu_cov_inflator/: imu_inflator_node.py
isaac_ros-dev/src/line_detection/: CMakeLists.txt  package.xml
isaac_ros-dev/src/line_detection/include/line_detection/: detection.hpp
isaac_ros-dev/src/line_detection/src/: cuda.cu  detection.cpp  node.cpp
isaac_ros-dev/src/line_layer/: CMakeLists.txt  package.xml
isaac_ros-dev/src/line_layer/src/: line_layer.cpp
isaac_ros-dev/src/local_mirror_layer/: CMakeLists.txt  local_mirror_layer.xml  package.xml
isaac_ros-dev/src/local_mirror_layer/src/: local_mirror_layer.cpp
isaac_ros-dev/src/map_padder/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/map_padder/map_padder/: map_padder_node.py
isaac_ros-dev/src/odom_handler/: CMakeLists.txt
isaac_ros-dev/src/odom_handler/src/: reference.py  wheel_odom_pub.cpp
(+155 files in other folders)
