<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonav_detection</name>
  <version>0.0.0</version>
  <description>AutoNav perception detectors: camera-based line detector and LiDAR-based PCA grade detector. Both run as separate executables sharing this package.</description>
  <maintainer email="jb5@vt.edu">joe</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>autonav_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>libopencv-dev</depend>
  <depend>eigen</depend>
  <depend>image_geometry</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
