cmake_minimum_required(VERSION 3.8)
project(autonav_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)
find_package(ament_cmake REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(std_msgs REQUIRED)




find_package(rosidl_default_generators REQUIRED)
rosidl_generate_interfaces(${PROJECT_NAME}

  #msg/Object.msg
  #msg/ObjectList.msg
  msg/Encoders.msg
  msg/GpsData.msg
	srv/ConfigureControl.srv
  msg/LinePoints.msg
  msg/LinePixels.msg
	srv/AnvLines.srv
	srv/GpsToLocal.srv
	srv/LocalToGps.srv
	action/NavigateToWaypoint.action
	DEPENDENCIES geometry_msgs std_msgs
)

# rosidl_target_interfaces(${PROJECT_NAME}
#   ${PROJECT_NAME}_rosidl_typesupport_cpp
# )

ament_export_dependencies(rosidl_default_runtime)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
