<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_waypoint_handler</name>
  <version>0.0.0</version>
  <description>Self-correcting GPS waypoint action server with a magnetometer-less heading EKF; hosts /navigate_to_waypoint, two coordinate-conversion services, and continuous diagnostic publishers.</description>
  <maintainer email="sramey02@vt.edu">vtuser</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>autonav_interfaces</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
