<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>local_mirror_layer</name>
  <version>1.0.0</version>
  <description>Nav2 costmap_2d plugin that mirrors a source OccupancyGrid (the local costmap) into a destination costmap with max-merge and resize-preserving accumulation.</description>
  <maintainer email="nathan.fikes@wavenumber.net">Nathan</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>nav2_common</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <costmap_2d plugin="${prefix}/local_mirror_layer.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
